--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
   display: inline-block;
 }
 
-.main_header .main_menu{display:block;float:right;margin:0;width:60%;height:40px;z-index:20;text-align: right;padding-top: 10px;}
+.main_header .main_menu{display:block;float:right;margin:0;width:70%;height:40px;z-index:20;text-align: right;padding-top: 10px;}
 .main_header .main_menu p{display: block;float: left;height: 100%;width: 100%;vertical-align: bottom;margin: 10px 0;}
 
 /*Content Wrapper css*/
@@ -85,7 +85,6 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 /*Fixed menu CSS*/
 #menu li {
   display: inline;
-  padding: 5px;
   position: relative;
 }
 
@@ -178,11 +177,11 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 
 
-.content_wrapper .section_body{display: block;float: left;width: 100%;height: 3600px;}
+.content_wrapper .section_body{display: block;float: left;width: 100%;}
 
 /*About Section*/
-.content_wrapper .about{display: block; height: 20%;width: 100%;}
-.content_wrapper .about .about_cutout{display: block;float: left;/*background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center 0/100%;*/ width: 62%;height: 100%;position: relative;left: 0; padding: 200px 70px 70px;}
+.content_wrapper .about{display: block; height: 720px;width: 100%;}
+.content_wrapper .about .about_cutout{display: block;float: left;/*background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center 0/100%;*/ width: 62%;height: 100%;position: relative;left: 0; padding: 200px 100px 70px;}
 .content_wrapper .about .about_cutout h2{display:block;float: left;font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 20px;font-family: 'Gotham';}
 .content_wrapper .about .about_cutout p{display:block;/*float: left;*/font-size: 1em;line-height: 1.6em;color: #999;width: 45%;margin-bottom: 20px;text-align: justify;}
 
@@ -241,7 +240,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
   background-size: cover; 
 }
 
-.content_wrapper .schdl .schdl_cutout1{display: block;float: right;/*background:url(../img/Final_backgrounds/Schedule-Holder.png) no-repeat center top/100%;*/ width: 38%;position: relative;top: 0;right: 0;padding: 315px 73px 0 160px;}
+.content_wrapper .schdl .schdl_cutout1{display: block;float: right;/*background:url(../img/Final_backgrounds/Schedule-Holder.png) no-repeat center top/100%;*/ width: 38%;position: relative;top: 0;right: 0;padding: 315px 73px 0 0;}
 .content_wrapper .schdl .schdl_cutout2{position: relative;}
 
 .day2-cutout-img {
@@ -252,9 +251,9 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 }
 
 .content_wrapper .schdl .schdl_cutout1 h2{display:block;float: left;font-size: 3em;color: #FFFFFF;width: 100%;text-align: right;font-family: 'Gotham';}
-.content_wrapper .schdl .day1{display: block;padding: 100px 0 220px 70px;}
+.content_wrapper .schdl .day1{display: block;padding: 100px 0 220px 100px;}
 .content_wrapper .schdl .day1 h3{display: block;font-family: 'Gotham';font-size:3em;color: #FF00C3;width: 100%;margin-bottom: 40px;}
-.content_wrapper .schdl .schdl_cutout2 .day2{display: block;width: 100%;position: relative;color: #141414;padding: 120px 0 60px 70px; z-index: 10;}
+.content_wrapper .schdl .schdl_cutout2 .day2{display: block;width: 100%;position: relative;color: #141414;padding: 120px 0 60px 100px; z-index: 10;}
 .content_wrapper .schdl .schdl_cutout2 .day2 h3{display: block;float: left;font-family: 'Gotham';font-size:3em;color: #141414;width: 100%;margin-bottom: 40px;}
 .content_wrapper .schdl .download_schedule{display: block;float: right;position: relative;top: -170px;width: 280px;text-align: center;margin-right: 70px;}
 .content_wrapper .schdl .download_schedule a{font-size: 1.4em;display: block;float: right;width: 100%;padding: 10px;border: 1px solid;border-style: dashed;line-height: 1.4em;border-radius: 8px;color:rgba(255,255,255, 0.7);cursor: pointer;}
@@ -281,17 +280,21 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .content_wrapper .schdl .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/
 
 /*Speakers Section css*/
-.content_wrapper .speakers{display: block;float: left;height: 40%;width: 100%;}
+.content_wrapper .speakers{display: block;float: left;height: 1440px;width: 100%;}
+.content_wrapper .speakers {
+  background:url(../img/Final_backgrounds/BG-dTalks.jpg) no-repeat center top/100%;
+  background-size: cover; 
+}
 .content_wrapper .speakers .speaker_cutout{display: block;float: left; width: 47%;height: 100%;position: relative;left: 0;padding: 380px 0 0 170px;}
 
 .speaker-cutout-img {
   position: absolute;
   top: 0;
   left: -1257px;
-  z-index: -1;
+  
 }
 
-.content_wrapper .speakers .speaker_cutout h2{display:block;float: left;font-size: 3em;color: #00FFE2;width: 100%;font-family: 'Gotham';}
+.content_wrapper .speakers .speaker_cutout h2{display:block;float: left;font-size: 3em;color: #00FFE2;width: 100%;font-family: 'Gotham';position: relative;z-index: 20;}
 .content_wrapper .speakers .first_row, .content_wrapper .speakers .second_row{display: block;float: right;margin-top: 160px;position: relative;top: -1440px;}
 .content_wrapper .speakers .first_row{width: 60%;}
 
@@ -350,45 +353,20 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 }
 
 .content_wrapper .speakers .first_row .col1 {
-  margin-top: 100px;
+  margin-top: 120px;
 }
 
 .content_wrapper .speakers .first_row .col3 {
-  padding-top: 160px;
+  padding-top: 180px;
 }
 
 /*.content_wrapper .speakers .section_icon{display: block;float: left;width: 15%;height: auto;}
 .content_wrapper .speakers .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/
 
-/*Workshops css*/
-.content_wrapper .workshops{display: block;float: left;background:url(../img/bg/backgrounds-05.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(152,44,255,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .workshops .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .workshops .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
+.content_wrapper .dlabs{display: block;width: 100%;overflow: hidden;height: 1100px;background:url(../img/Final_backgrounds/4k-solid.jpg) no-repeat center top/100%;
+  background-size: cover;border: 1px solid yellow;}
 
-/*Competitions Section css*/
-.content_wrapper .competitions{display: block;float: left;background:url(../img/bg/backgrounds-07.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(255,0,195,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .competitions .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .competitions .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
 
-/*Extras Section css*/
-.content_wrapper .extras{display: block;float: left;background:url(../img/bg/backgrounds-08.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(23,255,221,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .extras .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .extras .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
-
-/*Partners Section css*/
-.content_wrapper .partners{display: block;float: left;background:url(../img/bg/backgrounds-09.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(152,44,255,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .partners .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .partners .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
-
-/*Venue Section css*/
-.content_wrapper .venue_sec{display: block;float: left;background:url(../img/bg/backgrounds-10.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(255,0,195,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .venue_sec .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .venue_sec .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
-
-/*Contact Section css*/
-.content_wrapper .contact{display: block;float: left;background:url(../img/bg/backgrounds-06.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(23,255,221,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .contact .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .contact .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
 
 /*Footer css*/
 .main_footer{display: block;float: left;width: 100%;padding: 30px 100px;height: auto;background: #141414;color: #8d8d8d;border: none;}
@@ -478,12 +456,35 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 /******FADEIN DOWN END****/
 
+/*******Venue CSS Begins******/
+.content_wrapper .venue{display: block;float: left;width: 100%;height: 600px;background-color: #fff;}
+.content_wrapper .venue .venue_cnt, .content_wrapper .venue .map{display: block;float: left;width: 50%;padding: 100px;}
+.content_wrapper .venue .venue_cnt{color: #141414;}
+.content_wrapper .venue h2 {font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 30px;font-family: 'Gotham';}
+.content_wrapper .venue p{font-size: 1.2em;margin-bottom: 20px;}
+.content_wrapper .venue p.content{line-height: 1.4em;}
+.content_wrapper .venue p span{font-weight: bold;}
+
+
+/*******Partners CSS Begins******/
+.content_wrapper .partners{display: block;float: left;width: 100%;height: 600px;background-color: #fff;}
+.content_wrapper .partners h2 {font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 30px;font-family: 'Gotham';}
+.content_wrapper .partners .partner_cnt{display: block;float: left;width: 50%;padding: 100px;}
+
+/*******Gallery CSS Begins******/
+.content_wrapper .gallery{display: block;float: left;width: 100%;height: 600px;}
+.content_wrapper .gallery h2 {font-size: 3em;color: #982cff;;width: 100%;margin-bottom: 30px;font-family: 'Gotham';}
+.content_wrapper .gallery .gallery_cnt{display: block;float: left;width: 50%;padding: 100px;}
+
+
+
+
 body a:hover{text-decoration: none;}
 
 
 /******************* Responsive css Begins ******************/
 
-@media only screen and (width: 1920px){
+/*@media only screen and (width: 1920px){
 .home .logo_container {min-height: 600px;}
 .content_wrapper .section_body{height: 5400px;}
 .content_wrapper .schdl .schdl_cutout2{top: -2160px;}
@@ -525,7 +526,7 @@ body a:hover{text-decoration: none;}
 
 
 
-}
+}*/
 
 @media only screen and (max-width: 1200px) {
   .day2-cutout-img {
